--- a/robotframework/test01/results/results/report.html
+++ b/robotframework/test01/results/results/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,115],[[4,5,6,0,[],[0,17,2],[],[[0,0,1,0,[],[0,18,1,7],[]]],[],[1,0,1,0]],[8,9,10,0,[],[0,19,96],[],[[0,0,1,11,[],[0,114,0,7],[]]],[],[1,0,1,0]]],[],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19],[],[[4,0,1,0,[],[1,18,1],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Results","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results","*..","*Test1 Suite","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test1_suite.txt","*../test1_suite.txt","*Test case name cannot be empty.","*Test Suite","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test_suite.txt","*../test_suite.txt","*<p>测试淘宝\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test4","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test4.txt","*../test4.txt","*test case3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Results","name":"Results","pass":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s1","label":"Results.Test1 Suite","name":"Test1 Suite","pass":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s2","label":"Results.Test Suite","name":"Test Suite","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test4","name":"Test4","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1510647813943;
+window.output["baseMillis"] = 1520306446348;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 120;
+window.output["generated"] = 25;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
