--- a/robotframework/test01/results/results/log.html
+++ b/robotframework/test01/results/results/log.html
@@ -1727,28 +1727,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,115],[[4,5,6,0,[],[0,17,2],[],[[0,0,1,0,[],[0,18,1,7],[]]],[],[1,0,1,0]],[8,9,10,0,[],[0,19,96],[],[[0,0,1,11,[],[0,114,0,7],[]]],[],[1,0,1,0]]],[],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19],[],[[4,0,1,0,[],[1,18,1],[[0,5,6,0,7,8,0,0,[1,18,0],[],[[18,2,8]]],[0,5,6,0,7,9,0,0,[1,19,0],[],[[19,2,9]]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Results","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results","*..","*Test1 Suite","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test1_suite.txt","*../test1_suite.txt","*Test case name cannot be empty.","*Test Suite","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test_suite.txt","*../test_suite.txt","*<p>测试淘宝\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test4","*C:\\Users\\xuchun.chen\\PycharmProjects\\base\\robotframework\\test01\\results\\test4.txt","*../test4.txt","*test case3","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*robot framework","*python"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Results","name":"Results","pass":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s1","label":"Results.Test1 Suite","name":"Test1 Suite","pass":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s2","label":"Results.Test Suite","name":"Test Suite","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test4","name":"Test4","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1510647813943;
+window.output["baseMillis"] = 1520306446348;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 120;
+window.output["generated"] = 25;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
